--- a/app/src/main/res/layout/layout_listitem2.xml
+++ b/app/src/main/res/layout/layout_listitem2.xml
@@ -7,19 +7,19 @@
     android:id="@+id/parent_layout">
 
     <CheckBox
+        android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="55dp"
-        android:id="@+id/checkbox"/>
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/liste"
-        android:textSize="30dp"
-        android:layout_centerVertical="true"
-        android:layout_margin="50dp"
+        android:textSize="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="50dp"
         android:id="@+id/item"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
