--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
-        android:title="Pseudo"
-        android:key="pseudo"
-        android:defaultValue=" "
-        android:summary="Pseudo de l'utilisateur"/>
+        android:title="URL"
+        android:key="url"
+        android:defaultValue="http://tomnab.fr/todo-api/"
+        android:summary="URL de base de l'API"/>
 
 </PreferenceScreen>
