--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,11 +66,11 @@
         android:id="@+id/btnOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="36dp"
-        android:text="@android:string/ok"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@color/white"
+        android:text="@android:string/ok"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/edtPseudo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
